Remove fixed position image background from homepage banner and make picture alignment top and centre.

--- a/_/css/less/sections.less
+++ b/_/css/less/sections.less
@@ -546,10 +546,9 @@ section#top-banner {
 height: 100vh;
 .rel;
 .over-hide;
-
-	.bg-repeat(no-repeat);
-	.bg-size;
-	background-position: center center;
+.bg-repeat(no-repeat);
+.bg-size;
+background-position: top center;
 	
 	&.fixed-bg {
 	background-attachment: fixed;	
